--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta charset="utf-8" />
   </head>
   <body>
+    <p>暗号化</p>
     <input type="text" id="KeyText" />
     <input type="text" id="SrcText" />
     <input type="button" value="暗号化" id="encryption" />
+    <p>p2p</p>
+    <input type="text" id="DestText" />
+    <input type="text" id="DataText" />
+    <input type="button" value="送信" id="sendbutton" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
     <script type="module" src="script.js"></script>
   </body>
